--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-06 scizzo <scizzo@gimp.org>
+
+	* /downloads/index.htrw: Add 2 links to the sections for Windows and
+	MacOS X as Raphaël suggested.
+
 2003-08-05 scizzo <scizzo@gimp.org>
 
 	* /downloads/index.htrw: Changed the content in this file to close bug
