Modified ChangeLog Fixed a link bug to Mats mail.
Modified ChangeLog
Fixed a link bug to Mats mail.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-07 scizzo <scizzo@gimp.org>
+
+	* /macintosh/index.htrw: Fixed a link bug to Mats email.
+
 2003-08-06 scizzo <scizzo@gimp.org>
 
 	* /downloads/index.htrw: Add 2 links to the sections for Windows and
