--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-08-12  Henrik Brix Andersen  <brix@gimp.org>
+
+	* bugs/.cvsignore
+	* bugs/howtos/.cvsignore
+	* macintosh/.cvsignore
+	* windows/.cvsignore
+	* docs/.cvsignore: files updated 
+
 2003-08-10  Raphael Quinet  <quinet@gamers.org>
 
 	* about/index.htrw: trivial fix for bug #119489 (stray <i> tags).
