changed my describtion from Web Technician to Contributor (again). I would
2003-08-16 Henrik Brix Andersen <brix@gimp.org>

* team.htrw: changed my describtion from Web Technician to
Contributor (again). I would very much prefer no one changed it
back without my accept

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-08-16  Henrik Brix Andersen  <brix@gimp.org>
+
+	* team.htrw: changed my describtion from Web Technician to
+	Contributor (again). I would very much prefer no one changed it
+	back without my accept
+
 2003-08-13 scizzo <scizzo@gimp.org>
 
 	* /downloads/install_help.html: Fixed a broken link to GIMP for
