Fixed my e-mail address.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2003-08-23  Raphael Quinet  <raphael@gamers.org>
+2003-08-23  Raphael Quinet  <quinet@gamers.org>
 
 	* tutorials/index.htrw: Re-ordered the links to some tutorials and
 	improved the description of some of them.  Fixes bug #111699.
