--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+
+2004-08-26  Branko Collin <collin@xs4all.nl>
+
+	* develop/index.html
+	* develop/gimpcon*.(jpeg|png): added Jimmac's GIMPCON portrait
+	in slices.
+
 2003-08-25  Raphael Quinet  <quinet@gamers.org>
 
 	* tutorials/index.htrw: Use the new navindex class.
