--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-09-04  Henrik Brix Andersen  <brix@gimp.org>
+
+	* bugs/howtos/submit-patch.htrw: replaced > by &gt;, suggested
+	doing a make clean before generating patch file and added the -r
+	argument to the diff command
+
 2003-09-03  Raphael Quinet  <quinet@gamers.org>
 
 	* mail_lists.htrw: Removed the gimpwin-dev mailing list.  It has
