--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
 	* bugs/howtos/submit-patch.htrw: replaced > by &gt;, suggested
 	doing a make clean before generating patch file and added the -r
-	argument to the diff command
+	argument to the diff command. Updated copyright.
 
 2003-09-03  Raphael Quinet  <quinet@gamers.org>
 
