--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2003-09-07  Helvetix Victorinox  <helvetix@gimp.org>
+
+	* includes/wgo-admin-init.xhtml
+	* includes/wgo-admin-fini.xhtml: Updated for new layout
+
+	* Makefile (%.html): remove the intermediate file in processing
+	the attributes and SSI.
+
+	* programmatic/admin/news/wgo_news.py (news.as_news_item): 
+	  Changed P to DIV for a news article.
+
+	* Makefile: apply both the attribute rewriter and the SSI
+	  preprocessor to files suffixed with .ssi.
+
 2003-09-04  Henrik Brix Andersen  <brix@gimp.org>
 
 	* bugs/howtos/submit-patch.htrw: fixed url to the CVS HOWTO. When
