--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2003-09-07  Helvetix Victorinox  <helvetix@gimp.org>
 
+	* programmatic/admin/news/howto-news.html: Fixed typo New -> News.
+
 	* programmatic/contest/wgo_contest.py:
 	  Be smart about thumbnails, generating jpg instead of png.  Yet
 	  there are still png thumbnails in the spool, so choose the png
