--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-09-11  Helvetix Victorinox  <helvetix@gimp.org>
+
+	* Removed admin/example.ssi
+
+	* Added ssi preprocessing for .htrw files
+
+	* renamed admin/index.ssi -> admin/index.htrw
+	
+
 2003-09-09  Raphael Quinet  <quinet@gamers.org>
 
 	* includes/wgo-page-init.xhtml
